--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
 	<properties>
 		<start-class>com.khoubyari.example.Application</start-class>
+		<sonar.projectKey>jenkins_ci_cd</sonar.projectKey>
 	</properties>
 
 	<dependencies>
